# matsunoki

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  modules.d.ts  package-lock.json  package.json  turbo.json
.github/workflows/: ci-backend.yml  ci-frontend.yml  ci.yml  codeql-analysis.yml
api/: Cargo.toml
api/account/: Cargo.toml
api/account-driver/: Cargo.toml
api/account-driver/src/: cache.rs  config.rs  db_conn.rs  id_generator.rs  lib.rs  main.rs
api/account-driver/src/adapter/: firebase_auth_adapter.rs
api/account-driver/src/repository/: mod.rs  postgres_user_profile_repository.rs  postgres_user_repository.rs
api/account-http/: Cargo.toml
api/account-http/src/: actor.rs  error.rs  kernel.rs  lib.rs  main.rs
api/account-http/src/handler/: health_check.rs  mod.rs  resolve_profile.rs  sign_up.rs  update_profile.rs  verify.rs
api/account/src/: lib.rs
api/account/src/ability/: mod.rs  profile_creator.rs
api/account/src/actor/user/: mod.rs  profile_creator_ability.rs
api/account/src/adapter/: firebase_auth.rs  mod.rs
api/account/src/effect/: clock.rs  config.rs  id_generator.rs
api/account/src/model/: meta.rs  mod.rs
api/account/src/model/id_provider/: mod.rs
api/account/src/model/login_provider/: mod.rs
api/account/src/model/profile/: avatar.rs  display_name.rs  entity.rs  mod.rs  user_name.rs
api/account/src/model/user/: mod.rs  profile_creator_ability.rs
api/account/src/model/user_profile/: mod.rs
api/account/src/repository/: meta.rs  mod.rs  user_profile_repository.rs  user_repository.rs
api/account/src/usecase/: mod.rs  resolve_profile.rs  sign_up.rs  update_profile.rs  verify.rs
api/auth/: Cargo.toml
api/auth-driver/: Cargo.toml
api/auth-driver/src/: db_conn.rs  lib.rs  main.rs
api/auth-http/: Cargo.toml
api/auth/src/: error.rs  lib.rs
database/account/: migrate.sql
database/auth/: migrate.sql
docs/: 20220601-1911-frontend-preview.md  concept.md
web/adapter/: package.json
web/api-client/: .eslintrc.json  package.json  rollup.config.js  tsconfig.json  vitest.config.ts
web/api-client/src/: index.ts
web/app/: package.json  tsconfig.json  vite.config.ts
web/app/src/: App.tsx  index.tsx
web/core/: .eslintrc.json  package.json  rollup.config.js  tsconfig.json
web/core/src/: env.d.ts  error.ts  firebase.config.ts  index.ts  (+1 more)
web/eslint-config/: index.js  package.json
web/ssr-server/: package.json  tsconfig.json  vite.config.ts
web/ui/: index.html  package.json  rollup.config.js  tsconfig.json  vite.config.ts  vite.lib.config.ts
(+61 files in other folders)
