[package]
name = "account-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = {version = "0.99.17"}
chrono = { version = "0.4.19" }
async-trait = { version = "0.1.53" }
anyhow = { version = "1.0" }
thiserror = { version = "1.0" }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "offline" ] }
indoc = { version = "1.0" }
tokio = {version="1.18.1", features=["full"]}
tracing = { version = "0.1"}
tracing-subscriber = {version = "0.3"}
reqwest = { version =  "0.11.10", features=["json"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = {version = "1.0" }
jsonwebtoken = { version = "8" }
account = { path = "../account" }
uuid = { version = "1.0", features = ["v4"] }
semval = { version = "0.3.0" }

[dev-dependencies]
mockall = { version = "0.11.0" }
