[package]
name = "account-http"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"
[build-dependencies]
vergen = "7"
anyhow = { version = "1.0" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.4", features = ["headers"]}
derive_more = {version = "0.99.17"}
chrono = { version = "0.4.19" }
async-trait = { version = "0.1.53" }
anyhow = { version = "1.0" }
thiserror = { version = "1.0" }
tracing = { version = "0.1"}
tracing-subscriber = {version = "0.3", features=["env-filter"]}
tokio = {version="1.18.1", features=["full"]}
serde = {version = "1.0", features = ["derive"] }
serde_json = {version = "1.0" }
tower-http = { version = "0.3.2", features = ["trace", "add-extension"] }
account = { path = "../account" }
account-driver = { path = "../account-driver" }
strum = {version = "0.24"}
strum_macros = {version = "0.24"}
