[package]
name = "account"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = {version = "0.99.17"}
chrono = { version = "0.4.19" }
async-trait = { version = "0.1.53" }
anyhow = { version = "1.0" }
thiserror = { version = "1.0" }
serde = {version = "1.0", features = ["derive"] }
tracing = { version = "0.1"}

[dev-dependencies]
tokio = {version="^1.18.1", features=["macros", "rt"]}
mockall = { version = "0.11.0" }
